fix: code block on sharing tweet image do not scroll, wrap instead

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -79,3 +79,9 @@
 h1 {
   @apply text-4xl;
 }
+
+.sharing-image {
+  pre {
+    white-space: pre-wrap;
+  }
+}
